--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-source-filesystem": "^2.0.22",
     "gatsby-transformer-remark": "^2.2.6",
     "gatsby-transformer-sharp": "^2.1.14",
+    "github-markdown-css": "^3.0.1",
     "node-sass": "^4.11.0",
     "normalize.css": "^8.0.1",
     "prismjs": "^1.15.0",
