--- a/now.json
+++ b/now.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "name": "jongp.me",
-  "alias": "jonggyun.jongpme",
+  "alias": "jongpme.now.sh",
   "builds": [
     {
       "src": "package.json",
