--- a/package.json
+++ b/package.json
@@ -55,8 +55,6 @@
     "develop": "gatsby develop",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\"",
-    "now-build": "npm run build",
-    "now:prod": "now && now alias"
+    "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   }
 }
